--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -915,6 +915,7 @@ h6 {
 }
 .service-box.style3 .icon-bx-wraper:hover .dlab-title,
 .service-box.style3 .icon-bx-wraper:hover .icon-lg i,
+.service-box.style3 .icon-bx-wraper:hover .readmore-link,
 .service-box.style3 .icon-bx-wraper:hover:before,
 .service-box.style3 .icon-bx-wraper:hover {
   color: #fff;
