--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14872,6 +14872,7 @@ ol.commentlist li .star-rating {
   top: 0;
   opacity: 1;
   z-index: 999999999;
+  /* background-image: url(../images/logo.png); */
   background-image: url(../images/loading.svg);
   background-repeat: no-repeat;
   background-size: 80px;
