--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -2897,12 +2897,15 @@ HOME 5 Box Header
   font-weight: 600;
   font-size: 40px;
   margin-bottom: 10px;
+  color: white;
 }
 
 .section-head.style2 p {
   padding-top: 0;
   font-size: 15px;
   line-height: 26px;
+  color: white;
+
 }
 
 .sr-iconbox .dlab-tilte {
@@ -6624,7 +6627,7 @@ HOME 5 Box Header
 .testimonial-12 .testimonial-pic {
   padding: 0;
   width: 200px;
-  min-width: 180px;
+  min-width: 185px;
   height: 200px;
   border: 0;
   margin: 30px -80px 30px 0;
@@ -6754,7 +6757,7 @@ HOME 5 Box Header
   margin: 30px 30px 10px;
   text-align: center;
   position: relative;
-  color: var(--color-primary) !important;
+  color: white !important;
 }
 
 .testimonial-14 .testimonial-detail {
@@ -6800,7 +6803,7 @@ HOME 5 Box Header
   width: 100px;
   height: 100px;
   line-height: 100px;
-  background: #fff;
+  background: #1a1a1a;
   margin: 0 auto;
   font-size: 70px;
   font-weight: 900;
