--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12603,7 +12603,7 @@ ul[class*="list-"] {
 .dlab-info.br-col-w1[class*="border-"],
 .icon-bx-wraper.bx-style-1.br-col-w1,
 .icon-bx-wraper.bx-style-2.br-col-w1 {
-  border-color: rgba(255, 255, 255, 0.15);
+  border-color: #dadada;
 }
 
 .br-col-w2,
@@ -13613,7 +13613,7 @@ footer.text-white .dlab-quik-search .form-control::-webkit-input-placeholder {
 /* Subscribe Form */
 .subscribe-form input {
   background-color: rgba(0, 0, 0, 0);
-  border: 2px solid black;
+  border: 2px solid #dadada;
   border-radius: 30px !important;
   height: 50px;
   padding: 10px 20px;
@@ -17282,13 +17282,13 @@ input[type="radio"]+label:hover:before {
 
 .main {
   position: relative;
-  margin-bottom: 80px;
-  margin-top: 100px;
+  padding-bottom: 80px;
+  padding-top: 100px;
 }
 
 .homeservice-heading {
   position: sticky;
-  top: 130px;
+  top: 70px;
   transform: scale(1);
   /* Default zoom */
   opacity: 1;
