--- a/public/css/style.css
+++ b/public/css/style.css
@@ -131,8 +131,8 @@ html {
 
 body {
   background-color: #fff;
-  font-family: "Poppins", sans-serif;
-  font-size: 16px;
+  font-family: "Manrope", Sans-serif;  
+  font-size: 18px;
   font-weight: 400;
   color: #6f6f6f;
   padding: 0;
@@ -141,6 +141,9 @@ body {
   -webkit-font-smoothing: antialiased;
   font-smoothing: antialiased;
 }
+p{ font-size: 17px !important;}
+ul li{ font-size: 17px !important;}
+ul li a{ font-size: 17px !important;}
 
 a {
   color: var(--color-primary);
@@ -302,8 +305,10 @@ h4,
 h5,
 h6 {
   color: #232323;
-  font-family: "Poppins", sans-serif;
+ /* font-family: "Poppins", sans-serif;*/
+  font-family: 'vve-giallo-regulauploadedfile' !important; 
 }
+
 
 h1 a,
 h2 a,
@@ -17431,4 +17436,24 @@ input[type="radio"]+label:hover:before {
   .card .body .imageContainer img {
     top: 20px
   }
+}
+
+
+
+
+@font-face {
+  font-family: 'qrosbiregular';
+  src: url('/fonts/qrosbi-webfont.woff2') format('woff2'),
+       url('/fonts/qrosbi-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+@font-face {
+font-family: 'vve-giallo-regulauploadedfile';
+src: url('/fonts/vve-giallo-regular-webfont.woff2') format('woff2'),
+     url('/fonts/vve-giallo-regular-webfont.woff') format('woff');
+font-weight: normal;
+font-style: normal;
+
 }
