--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17457,3 +17457,6 @@ font-weight: normal;
 font-style: normal;
 
 }
+
+.slider-content .inner.sliderStyle7 .subTitle1{ font-family: 'vve-giallo-regulauploadedfile' !important; }
+.slider-content .inner.sliderStyle7 button{ font-family: 'vve-giallo-regulauploadedfile' !important; font-weight: 800 !important;}
