--- a/public/css/slides.css
+++ b/public/css/slides.css
@@ -11,6 +11,7 @@
   text-align: left;
   white-space: normal;
 }
+
 .hero-section .description {
   color: #fff;
   font-size: 18px;
@@ -18,6 +19,7 @@
   margin-bottom: 25px;
   margin-top: 15px;
 }
+
 .hero-section a {
   border: 1px solid #fff;
   border-radius: 30px;
@@ -29,21 +31,26 @@
   margin-right: 21px;
   padding: 0 35px;
 }
+
 .home-bnr1 .buttons a {
   transition: 0.3s;
 }
+
 .home-bnr1 .buttons a:hover {
   background-color: #fff;
   color: black;
 }
+
 .hero-section {
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 .pt-50 {
   padding-top: 50px;
 }
+
 .home-bnr1 img {
   width: 700px;
   max-width: initial;
@@ -58,23 +65,28 @@
   flex: 0 0 100%;
   margin-bottom: 15px;
 }
+
 .home-slider2 .sliderStyle2 {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
+
 .home-slider2 .slider-content .sliderStyle2 p {
   max-width: 33%;
   margin-bottom: 0;
   padding-right: 30px;
 }
+
 .slider-content .inner.sliderStyle2 button {
   padding: 15px 50px;
 }
+
 .slider-content .inner.sliderStyle2 p {
   text-align: left;
   color: hsla(0, 0%, 100%, 0.5);
 }
+
 .slider-content .sliderStyle2 button {
   background: transparent;
   border: 1px solid hsla(0, 0%, 100%, 0.25);
@@ -82,6 +94,7 @@
   font-size: 14px;
   padding: 11px 60px;
 }
+
 .slider-content .sliderStyle2 button {
   letter-spacing: 2px;
   font-size: 12px;
@@ -97,9 +110,11 @@
 .sliderStyle2 button {
   transition: 0.3s;
 }
+
 .sliderStyle2 button:hover {
   border-color: #fff;
 }
+
 .swiper .slider-content .sliderStyle3 {
   padding: 0;
   bottom: auto;
@@ -110,14 +125,17 @@
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
 }
+
 .swiper .slider-content .sliderStyle3 h1 {
   font-size: 60px;
   font-weight: 600;
   text-align: center;
 }
+
 .sliderStyle4 button {
   margin-right: 15px;
 }
+
 .slider-content .inner.sliderStyle4 h1 {
   z-index: 8;
   letter-spacing: 2px;
@@ -132,6 +150,7 @@
   margin: 0px;
   padding: 0px;
 }
+
 .slider-content .inner.sliderStyle4,
 .slider-content .inner.sliderStyle5,
 .slider-content .inner.sliderStyle7 {
@@ -144,12 +163,14 @@
   top: 50%;
   transform: translateY(-50%);
 }
+
 .slider-content .inner.sliderStyle4 h1 {
   font-size: 65px;
   line-height: 80px;
   font-weight: 600;
   margin-bottom: 20px;
 }
+
 .slider-content .inner.sliderStyle4 p {
   font-size: 18px;
   line-height: 30px;
@@ -158,55 +179,70 @@
   min-width: 640px;
   margin-bottom: 35px;
 }
+
 @media only screen and (max-width: 1200px) {
+
   .btn-style-1 .slick-prev,
   .btn-style-1 .slick-next {
     margin: 0 40px;
   }
+
   .contact-no-area .title,
   .slider-content .inner h1,
   .hero-section .title {
     line-height: 1.3;
     font-size: 50px;
   }
+
   .home-slider2 .slider-content .sliderStyle2 h1 {
     font-size: 70px;
   }
+
   .home-slider2 .slider-content .sliderStyle2 p {
     max-width: 45%;
   }
+
   .home-slider2 .slider-content .sliderStyle2 {
     padding: 0 40px 40px 40px;
   }
+
   .slider-wrapper .slider-content .sliderStyle3 h1 {
     font-size: 50px;
   }
+
   .btn-style-2.out .slick-prev,
   .btn-style-2.out .slick-next {
     margin: 0px 20px;
   }
 }
+
 @media only screen and (max-width: 991px) {
+
   .home-bnr1,
   .home-bnr1.hero-section .title,
   .hero-content {
     text-align: center;
   }
+
   .contact-no-area .title,
   .slider-content .inner h1,
   .hero-section .title {
     font-size: 40px;
   }
+
   .home-bnr1 .hero-content {
     margin-bottom: 30px;
   }
+
   .home-bnr1 img {
     width: 80%;
     max-width: 80%;
   }
+
   .has-mega-menu.homedemo .mega-menu {
     height: auto;
   }
+
   .header .sticky-inner-wrapper {
     transform: unset !important;
     -moz-transform: unset !important;
@@ -214,66 +250,82 @@
     -ms-transform: unset !important;
     -o-transform: unset !important;
   }
+
   .home-slider2 .slider-content .inner p {
     max-width: 60%;
   }
+
   .slider-content .inner.sliderStyle3 h1 {
     width: 100%;
     padding: 0 50px;
     font-size: 40px;
   }
+
   .slick-slider.project-list,
   .project-list {
     margin-bottom: 20px;
   }
+
   .btn-style-1.client-btn .slick-prev,
   .btn-style-1.client-btn .slick-next {
     margin: 0 30px;
   }
+
   .exhibition-carousel {
     margin-bottom: 30px !important;
   }
+
   .portbox1.style1 {
     margin-bottom: 15px;
   }
 }
+
 @media only screen and (max-width: 767px) {
   .home-slider2 .slider-content .sliderStyle2 h1 {
     font-size: 40px;
   }
+
   .home-slider2 .slider-content .sliderStyle2 p {
     max-width: 100%;
     margin-bottom: 20px;
   }
+
   .on-show-slider {
     overflow: hidden;
   }
+
   .project-carousel-2 {
     margin: 0;
   }
+
   .btn-style-2.out .slick-prev,
   .btn-style-2.out .slick-next {
     margin: 0px 35px;
   }
 }
+
 @media only screen and (max-width: 576px) {
+
   .contact-no-area .title,
   .slider-content .inner h1,
   .hero-section .title {
     font-size: 28px;
     line-height: 1.5;
   }
+
   .hero-section .description {
     line-height: 1.5;
     font-size: 15px;
     margin-top: 10px;
     margin-bottom: 15px;
   }
+
   .hero-section a {
     padding: 0 25px;
     line-height: 45px;
     margin: 0 10px;
   }
+
   .home-slider2 .slider-content .sliderStyle2 {
     padding: 0 20px 0px 40px;
     text-align: center;
@@ -281,6 +333,7 @@
     top: 50%;
     margin-top: -25%;
   }
+
   .slider-content .inner.sliderStyle3 h1 {
     padding: 0 40px;
     font-size: 28px;
@@ -300,12 +353,14 @@
   top: 50%;
   transform: translateY(-50%);
 }
+
 .slider-content .inner.sliderStyle4 h1 {
   font-size: 65px;
   line-height: 80px;
   font-weight: 600;
   margin-bottom: 20px;
 }
+
 .slider-content .inner.sliderStyle4 p {
   font-size: 18px;
   line-height: 30px;
@@ -316,24 +371,29 @@
 }
 
 @media only screen and (max-width: 1024px) {
+
   .slider-content .inner.sliderStyle4,
   .slider-content .inner.sliderStyle5,
   .slider-content .inner.sliderStyle7 {
     width: 960px;
   }
 }
+
 @media only screen and (max-width: 991px) {
+
   .slider-content .inner.sliderStyle4,
   .slider-content .inner.sliderStyle5,
   .slider-content .inner.sliderStyle7 {
     width: 720px;
     text-align: center;
   }
+
   .slider-content .inner.sliderStyle4 h1 {
     font-size: 50px;
     line-height: 60px;
     text-align: center;
   }
+
   .slider-content .inner.sliderStyle4 p {
     min-width: 80%;
     margin-bottom: 25px;
@@ -342,37 +402,46 @@
     margin-right: auto;
   }
 }
+
 @media only screen and (max-width: 767px) {
+
   .slider-content .inner.sliderStyle4,
   .slider-content .inner.sliderStyle5,
   .slider-content .inner.sliderStyle7 {
     width: 540px;
   }
+
   .slider-content .inner.sliderStyle4 h1 {
     font-size: 40px;
     line-height: 50px;
     margin-bottom: 15px;
   }
+
   .slider-content .inner.sliderStyle4 p {
     min-width: 90%;
     font-size: 16px;
     line-height: 24px;
   }
 }
+
 @media only screen and (max-width: 591px) {
+
   .slider-content .inner.sliderStyle4,
   .slider-content .inner.sliderStyle5,
   .slider-content .inner.sliderStyle7 {
     width: 100%;
   }
+
   .slider-content .inner.sliderStyle4 h1 {
     font-size: 30px;
     line-height: 40px;
     margin-bottom: 10px;
   }
+
   .slider-content .inner.sliderStyle4 p {
     font-size: 14px;
   }
+
   .slider-content .inner.sliderStyle4 button {
     margin-right: 5px;
     margin-left: 5px;
@@ -390,6 +459,7 @@
   font-size: 53px;
   max-width: none;
 }
+
 .slider-content .inner.sliderStyle5 .subTitle1 {
   font-family: "Roboto Condensed", sans-serif;
   text-align: center;
@@ -398,9 +468,11 @@
   font-size: 11px;
   min-width: 100%;
 }
+
 .slider-content .inner.sliderStyle5 {
   margin-top: 50px;
 }
+
 .slider-content .inner.sliderStyle5 h1 {
   min-width: 450px;
   max-width: 450px;
@@ -422,6 +494,7 @@
   font-weight: 400;
   color: rgb(0, 3, 15);
 }
+
 .slider-content .inner.sliderStyle5 button {
   margin-right: 20px;
   letter-spacing: 2px;
@@ -432,6 +505,7 @@
   padding: 15px 30px;
   border-radius: 0;
 }
+
 .home-slider-5 .slide,
 .home-slider-5 .slider-wrapper {
   height: 100vh;
@@ -440,15 +514,18 @@
 .home-slider-5 .home-slider2 .swiper-slide {
   height: 100vh;
 }
+
 .home-slider-5 .swiper-slide::before {
   content: none;
 }
+
 .home-slider-5 .previousButton:hover,
 .home-slider-5 .nextButton:hover,
 .home-slider-5 .previousButton,
 .home-slider-5 .nextButton {
   background-color: rgba(0, 0, 0, 0.25);
 }
+
 @media only screen and (max-width: 991px) {
   .slider-content .inner.sliderStyle5 h1 {
     min-width: 350px;
@@ -459,6 +536,7 @@
     margin-left: auto;
     margin-right: auto;
   }
+
   .slider-content .inner.sliderStyle5 p {
     min-width: 400px;
     max-width: 400px;
@@ -468,28 +546,33 @@
     margin-left: auto;
     margin-right: auto;
   }
+
   .slider-content .inner.sliderStyle5 button {
     margin-right: 10px;
     margin-left: 10px;
   }
 }
+
 @media only screen and (max-width: 767px) {
   .slider-content .inner.sliderStyle5 h1 {
     font-size: 40px;
     line-height: 50px;
     margin-bottom: 15px;
   }
+
   .home-slider-5 .slide,
   .home-slider-5 .slider-wrapper {
     height: 700px;
   }
 }
+
 @media only screen and (max-width: 591px) {
   .slider-content .inner.sliderStyle5 button {
     margin-right: 5px;
     margin-left: 5px;
     padding: 10px 20px;
   }
+
   .slider-content .inner.sliderStyle5 h1 {
     font-size: 30px;
     line-height: 40px;
@@ -497,6 +580,7 @@
     min-width: 70%;
     max-width: 70%;
   }
+
   .slider-content .inner.sliderStyle5 p {
     min-width: 300px;
   }
@@ -504,42 +588,47 @@
 
 /* sliderStyle7 */
 .slider-content .inner.sliderStyle7 div {
-  background-color: rgba(255, 255, 255, 0.95);
+  /* background-color: rgba(255, 255, 255, 0.95); */
   padding: 30px;
   width: 570px;
 }
+
 .slider-content .inner.sliderStyle7 .subTitle1 {
   font-size: 22px;
   line-height: 35px;
   font-weight: 700;
-  color: #000;
+  color: white;
   margin-bottom: 10px;
 }
+
 .slider-content .inner.sliderStyle7 h1 {
   letter-spacing: 2px;
   font-size: 45px;
   line-height: 55px;
   font-weight: 700;
-  color: var(--color-primary);
+  color: white;
   margin-bottom: 10px;
 }
+
 .slider-content .inner.sliderStyle7 p {
   min-width: 520px;
   max-width: 520px;
   font-size: 16px;
   line-height: 26px;
   font-weight: 500;
-  color: rgba(0, 0, 0, 0.85);
+  color: white;
 }
+
 .slider-content .inner.sliderStyle7 button {
   font-size: 15px;
   line-height: 50px;
   font-weight: 500;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: transparent;
   border: 2px solid;
   padding: 0px 25px;
   box-shadow: none;
 }
+
 .home-slider-7 .nextButton,
 .home-slider-7 .previousButton {
   bottom: 0;
@@ -549,9 +638,11 @@
   width: 40px;
   background-size: 20px;
 }
+
 .home-slider-7 .nextButton {
   right: 20px;
 }
+
 .home-slider-7 .previousButton {
   transform: rotate(180deg);
   transform-origin: center 25%;
@@ -564,33 +655,40 @@
     text-align: left;
   }
 }
+
 @media only screen and (max-width: 767px) {
   .slider-content .inner.sliderStyle7 div {
     width: 100%;
   }
+
   .slider-content .inner.sliderStyle7 h1 {
     font-size: 40px;
     line-height: 50px;
   }
+
   .slider-content .inner.sliderStyle7 .subTitle1 {
     font-size: 18px;
     line-height: 30px;
   }
 }
+
 @media only screen and (max-width: 591px) {
   .slider-content .inner.sliderStyle7 h1 {
     font-size: 30px;
     line-height: 40px;
   }
+
   .slider-content .inner.sliderStyle7 div {
     padding: 20px;
   }
+
   .slider-content .inner.sliderStyle7 .subTitle1 {
     font-size: 16px;
     line-height: 24px;
     min-width: 100%;
     max-width: 100%;
   }
+
   .slider-content .inner.sliderStyle7 p {
     min-width: 100%;
     max-width: 100%;
@@ -612,6 +710,7 @@
   margin-top: 50px;
   margin-right: auto;
 }
+
 .slider-content .inner.sliderStyle10 h1 {
   font-family: "Roboto Condensed", sans-serif;
   line-height: 61px;
@@ -620,6 +719,7 @@
   text-align: center;
   margin-bottom: 40px;
 }
+
 .slider-content .inner.sliderStyle10 button {
   font-family: "Roboto Condensed", sans-serif;
   line-height: 13px;
@@ -631,6 +731,7 @@
   border: 1px solid;
   background-color: transparent;
 }
+
 .slider-content .inner.sliderStyle10 .subTitle1 {
   font-family: "Roboto Condensed", sans-serif;
   line-height: 12px;
@@ -640,41 +741,50 @@
   text-align: center;
   margin-bottom: 35px;
 }
+
 .home-slider-10 .hero-sec .swiper-slide,
 .home-slider-10 .hero-sec .slider-wrapper {
   height: 100vh;
 }
 
 @media only screen and (max-width: 767px) {
+
   .home-slider-10 .hero-sec .swiper-slide,
   .home-slider-10 .hero-sec .slider-wrapper,
   .home-slider-10 .hero-sec .home-swiper-10 {
     height: 600px;
   }
+
   .slider-content .inner.sliderStyle10 h1 {
     line-height: 45px;
     font-size: 40px;
     margin-bottom: 30px;
   }
+
   .slider-content .inner.sliderStyle10 .subTitle1 {
     margin-bottom: 25px;
   }
 }
+
 @media only screen and (max-width: 591px) {
   .slider-content .inner.sliderStyle10 {
     width: 100%;
   }
+
   .slider-content .inner.sliderStyle10 h1 {
     line-height: 40px;
     font-size: 30px;
     margin-bottom: 20px;
   }
+
   .slider-content .inner.sliderStyle10 {
     width: 80%;
   }
+
   .slider-content .inner.sliderStyle10 .subTitle1 {
     margin-bottom: 15px;
   }
+
   .slider-content .inner.sliderStyle10 button {
     padding: 15px 30px;
   }
@@ -687,6 +797,7 @@
   font-weight: 700;
   letter-spacing: 1px;
 }
+
 .hero-section .subtitle {
   font-size: 21px;
   font-weight: 400;
@@ -694,6 +805,7 @@
   margin-top: 10px;
   margin-bottom: 25px;
 }
+
 .hero-section .subtitle.style3 {
   font-size: 13px;
   line-height: 14px;
@@ -705,6 +817,7 @@
   border-bottom: 1px solid rgb(246, 115, 46);
   display: inline-block;
 }
+
 .hero-section .subtitle.style2 {
   color: #00afe2;
   text-transform: uppercase;
@@ -712,6 +825,7 @@
   display: inline-block;
   font-size: 18px;
 }
+
 .hero-section .description.style2 {
   font-size: 13px;
   line-height: 21px;
@@ -719,9 +833,11 @@
   text-align: left;
   width: 380px;
 }
+
 .height-70 {
   height: 70vh;
 }
+
 .beer-video {
   position: absolute;
   left: 0;
@@ -730,9 +846,11 @@
   height: 100%;
   object-fit: fill;
 }
+
 .full-height {
   height: 100vh;
 }
+
 .overlay3:before {
   background: rgba(51, 51, 51, 0.6);
   content: "";
@@ -743,12 +861,15 @@
   width: 100%;
   z-index: 2;
 }
+
 .video-section .hero-content {
   z-index: 2;
 }
+
 .beer-icon {
   width: 60px;
 }
+
 .seperator {
   background: hsla(0, 0%, 100%, 0.25);
   display: block;
@@ -756,11 +877,13 @@
   margin: 21px auto;
   width: 75px;
 }
+
 .worker-pic {
   height: 85vh;
   width: auto;
   z-index: 3;
 }
+
 .bottom {
   bottom: 0;
   left: 50%;
@@ -768,11 +891,13 @@
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
 }
+
 .worker-frame {
   height: 75vh;
   width: auto;
   z-index: 2;
 }
+
 .hero-sec .overlay2:before,
 .hero-sec .overlay:before {
   content: "";
@@ -782,15 +907,18 @@
   top: 0;
   width: 100%;
 }
+
 .hero-sec .overlay:before {
   background: #000;
   opacity: 0.5;
 }
+
 .hero-section a.style2 {
   background: #00afe2;
   border: none;
   border-radius: 0;
 }
+
 .content-center {
   left: 50%;
   position: absolute;
@@ -799,11 +927,13 @@
   transform: translate(-50%, -50%);
   width: 100%;
 }
+
 .hero-section.home-slider-11 .title.style3 {
   font-size: 58px;
   line-height: 69px;
   font-weight: 700;
 }
+
 .hero-section.home-slider-11 .subtitle.fs-16 {
   font-size: 18px;
   line-height: 16px;
@@ -811,6 +941,7 @@
   font-family: Open Sans;
   margin: 30px 0;
 }
+
 .hero-section.home-slider-11 .site-button {
   border: 0;
   border-radius: 0;
@@ -827,15 +958,18 @@
     max-width: 100%;
   }
 }
+
 @media only screen and (max-width: 591px) {
   .hero-section.home-slider-11 .title.style3 {
     font-size: 36px;
     line-height: 50px;
     font-weight: 700;
   }
+
   .hero-section.home-slider-11 .subtitle.style3 {
     margin-bottom: 10px;
   }
+
   .hero-section.home-slider-11 .subtitle.fs-16 {
     margin: 20px 0;
   }
@@ -858,17 +992,20 @@
   display: inline-flex;
   align-items: center;
 }
+
 .hero-section.home-slider-12 .title.style4 {
   line-height: 61px;
   letter-spacing: 8px;
   font-size: 61px;
 }
+
 .hero-section.home-slider-12 .description {
   line-height: 17px;
   font-weight: 400;
   font-size: 17px;
   margin: 10px 0 40px;
 }
+
 .hero-section.home-slider-12 .social-icons a {
   min-width: 44px;
   max-width: 44px;
@@ -881,15 +1018,18 @@
   border-radius: 30px;
   margin: 0 5px;
 }
+
 @media only screen and (max-width: 767px) {
   .hero-section.home-slider-12 .title.style4 {
     line-height: 50px;
     font-size: 40px;
   }
+
   .hero-section.home-slider-12 .site-button {
     padding: 12px 30px 12px 30px;
     margin: 0 10px;
   }
+
   .hero-section.home-slider-12 .description {
     font-size: 16px;
     width: 70%;
@@ -900,15 +1040,18 @@
     margin-bottom: 20px;
   }
 }
+
 @media only screen and (max-width: 591px) {
   .hero-section.home-slider-12 .title.style4 {
     line-height: 40px;
     font-size: 30px;
     letter-spacing: 4px;
   }
+
   .hero-section.home-slider-12 .site-button {
     margin: 5px 10px;
   }
+
   .hero-section.home-slider-12 .description {
     font-size: 14px;
     width: 80%;
@@ -921,25 +1064,30 @@
 .hero-section.home-slider-13 .big-text {
   font-family: "Roboto Condensed", sans-serif;
 }
+
 @media only screen and (max-width: 991px) {
   .hero-section.home-slider-13 .big-text {
     font-size: 180px;
     bottom: 30%;
   }
 }
+
 @media only screen and (max-width: 591px) {
   .hero-section.home-slider-13 .worker-pic {
     width: auto;
     height: 376px;
   }
+
   .hero-section.home-slider-13 .worker-frame {
     width: 210px;
     height: 296px;
   }
+
   .hero-section.home-slider-13 .big-text {
     font-size: 100px;
     bottom: 20%;
   }
+
   .hero-section.home-slider-13 .full-height {
     height: 550px;
   }
@@ -951,47 +1099,58 @@
   font-size: 86px;
   line-height: 92px;
 }
+
 .hero-section.home-slider-14 .description.style2 {
   font-size: 15px;
   line-height: 24px;
   width: 420px;
 }
+
 .hero-section.home-slider-14 a {
   border-width: 2px;
   border-radius: 3px;
 }
+
 .hero-section.home-slider-14 .hero-content.content-center {
   text-align: left;
 }
+
 @media only screen and (max-width: 991px) {
   .hero-section.home-slider-14 .title.style2 {
     font-size: 50px;
     line-height: 60px;
   }
+
   .hero-section.home-slider-14 .description.style2 {
     font-size: 14px;
     width: 100%;
   }
 }
+
 @media only screen and (max-width: 767px) {
   .hero-section.home-slider-14 .description.style2 {
     width: 70%;
   }
+
   .hero-section.home-slider-14 .full-height {
     height: 600px;
   }
 }
+
 @media only screen and (max-width: 591px) {
   .hero-section.home-slider-14 {
     padding: 0 15px;
   }
+
   .hero-section.home-slider-14 .description.style2 {
     width: 100%;
   }
+
   .hero-section.home-slider-14 .title.style2 {
     font-size: 40px;
     line-height: 50px;
   }
+
   .hero-section.home-slider-14 a {
     margin: 0;
   }
@@ -1002,24 +1161,30 @@
   font-weight: 600;
   font-family: Roboto;
 }
+
 .hero-section.home-slider-15 .title {
   margin-bottom: 30px;
 }
+
 .hero-section.home-slider-15 .hero-content {
   margin-top: 50px;
 }
+
 @media only screen and (max-width: 767px) {
   .hero-section.home-slider-15 .title {
     margin-bottom: 20px;
   }
+
   .hero-section.home-slider-15 .full-height {
     height: 600px;
   }
 }
+
 @media only screen and (max-width: 591px) {
   .hero-section.home-slider-15 .subtitle {
     font-size: 16px;
   }
+
   .hero-section.home-slider-15 .subtitle.style2 {
     font-size: 14px;
   }
