--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7753,6 +7753,11 @@ a,
 /*==== Shortcode Css ====*/
 .sort-title {
   margin-bottom: 20px;
+  margin-top: 40px;
+  /* display: none; */
+}
+.display-title{
+  display: block;
 }
 
 .sort-title h4:after {
@@ -7992,7 +7997,9 @@ a,
   white-space: nowrap;
   vertical-align: middle;
 }
-
+.pricing-btn{
+  padding: 12px 10px;
+}
 .site-button {
   background-color: var(--color-primary);
 }
@@ -11676,7 +11683,7 @@ ul[class*="list-"] {
 
 .pricingtable-bx {
   color: #282a3c;
-  font-size: 45px;
+  font-size: 30px;
   font-weight: 500;
 }
 
@@ -11686,10 +11693,10 @@ ul[class*="list-"] {
   font-size: 16px;
 }
 
-.pricingtable-type:before {
+/* .pricingtable-type:before {
   content: "/";
   margin-right: 3px;
-}
+} */
 
 .pricingtable-title {
   background-color: #fff;
@@ -11700,19 +11707,21 @@ ul[class*="list-"] {
 .pricingtable-title * {
   margin: 0;
   color: #fff;
-  font-weight: 800;
+  font-weight: 900;
 }
 
 .pricingtable-features {
   margin: 0;
   padding: 0;
   list-style: none;
-  border: 1px solid #e9e9e9;
+  /* border: 1px solid #e9e9e9; */
 }
 
 .pricingtable-features li {
-  padding: 12px;
-  border-bottom: 1px solid #e9e9e9;
+  padding: 5px;
+  /* border-bottom: 1px solid #e9e9e9; */
+  background-color: white;
+  font-size: 14px;
 }
 
 .pricingtable-features li i {
@@ -11729,7 +11738,7 @@ ul[class*="list-"] {
 
 .pricingtable-footer {
   margin-top: -1px;
-  padding: 20px;
+  padding: 20px 0;
   background-color: #fff;
   border: 1px solid #e9e9e9;
 }
@@ -11805,7 +11814,12 @@ ul[class*="list-"] {
   line-height: 16px;
   text-align: center;
   width: 20px;
+ 
 }
+.pricingtable-wrapper.style1 .pricingtable-features li:before {
+  content: "\e71b";
+}
+
 
 .pricingtable-wrapper.style1 .button-md {
   font-weight: 400;
@@ -11817,7 +11831,8 @@ ul[class*="list-"] {
 }
 
 .pricingtable-wrapper.style2 {
-  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+  
+  /* box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1); */
   padding: 30px;
 }
 
@@ -11828,18 +11843,21 @@ ul[class*="list-"] {
 }
 
 .pricingtable-wrapper.style2 .pricingtable-bx {
-  background: rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  /* background: rgba(0, 0, 0, 0.1); */
+  /* border-radius: 10px; */
   color: #a0a0a0;
   display: inline-block;
-  font-size: 13px;
-  margin-top: 20px;
-  padding: 15px 25px;
-  margin-bottom: 10px;
-}
-
+  font-size: 18px;
+  margin-top: 10px;
+  /* padding: 15px 25px; */
+  /* margin-bottom: 10px; */
+  color: #1A43BF;
+  
+}  
 .pricingtable-wrapper.style2 .pricingtable-bx span {
   font-size: 22px;
+  font-weight: 600;
+  color: #1A43BF;
 }
 
 .pricingtable-wrapper.style2.active {
@@ -11851,7 +11869,13 @@ ul[class*="list-"] {
 
 .pricingtable-wrapper.style2.active .pricingtable-bx {
   color: #fff;
+  font-weight: bold;
 }
+.pricingtable-wrapper.style2.active .pricingtable-bx span{
+  color: #fff;
+  font-weight: bold;
+}
+
 
 /*== COUNTERUP ===*/
 .counter {
@@ -17297,7 +17321,7 @@ input[type="radio"]+label:hover:before {
 .main {
   position: relative;
   /* padding-bottom: 80px; */
-  padding-top: 100px;
+  /* padding-top: 100px; */
 }
 
 /*  */
@@ -17314,17 +17338,18 @@ input[type="radio"]+label:hover:before {
 }
 
 .cardContainer {
-  height: 350px;
+  height: 500px;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   justify-content: center;
   position: sticky;
-  top: 200px;
+  top: 100px;
   transform: scale(1);
   /* Default zoom */
   opacity: 1;
   /* Default visibility */
   transition: transform 0.3s ease, opacity 0.3s ease;
+
 }
 
 .cardContainer.scrolled-up {
@@ -17337,8 +17362,117 @@ input[type="radio"]+label:hover:before {
   transform: scale(1.1);
   opacity: 1;
 }
+.cardContainer .sort-title {
+  opacity: 0; /* Initially invisible */
+  transition: opacity 0.3s ease-in-out;
+}
+
+.cardContainer .display-title {
+  opacity: 1; /* Visible when active */
+}
+.cardContainer .site-button, .site-button-secondry{
+  padding: 8px 5px;
+  margin-top: 0;
+}
+.cardContainer .m-t20{
+  margin-top: 10px;
+}
+.cardContainer .site-button, .site-button-secondry span{
+  font-size: 12px;
+}
+.cardContainer .site-button, .site-button-secondry  .p-lr30{
+ padding: 8px 2px !important;
+}
+.pricingtable-wrapper.style2 .pricingtable-features{
+  padding: 10px 0;
+  
+}
+/* .pricingtable-wrapper.style2 .pricingtable-features li i {
+  border: 2px solid;
+  border-radius: 20px;
+  display: block;
+  float: right;
+  font-size: 8px;
+  height: 18px;
+  line-height: 16px;
+  text-align: center;
+  width: 18px;
+
+} */
+
+.cardContainer .bg-grey{
+  background-color: grey !important;
+}
+.cardContainer .site-button, .site-button-secondry.white{
+  border: 1px solid #1A43BF;
+
+}
+.cardContainer .site-button-secondry.white span{
+  color: #1A43BF;
+}
+.cardContainer .site-button.white-1{
+  border: 1px solid #fff;
+}
+.cardContainer .bg-grey .site-button.white{
+  border: 1px solid #fff;
+   background-color: #fff;
+   color: grey;
+ 
+ }
+.cardContainer .bg-grey .site-button.white-1{
+ border: 1px solid #fff;
+  background-color: grey;
+  color: #fff;
+
+}
+.pricingtable-wrapper.style2 .pricingtable-features li{
+  font-size: 15px !important;
+  /* padding: 2px; */
+  background-color: transparent !important;
+  position: relative;
+  text-align: left;
+  padding-left: 25px;
+}
+/* .pricingtable-wrapper.style2 .pricingtable-features li{
+  color: #fff !important;
+} */
 
 
+.pricingtable-wrapper.style2 .pricingtable-features li:before {
+  font-family: "themify";
+  position: absolute;
+  content: "\e64d";
+  left: 0px;
+  top: 5px;
+  display: block;
+  font-size: 15px;
+  color: #1A43BF;
+}
+.cardContainer  .pricingtable-wrapper.style2.active .pricingtable-price h4{
+  color:#cbcaca ;
+}
+.pricingtable-wrapper.style2.active .pricingtable-features li{
+  color: #cbcaca;
+}
+.cardContainer  .pricingtable-wrapper.style2.bg-grey.active .pricingtable-price h4{
+  color:#fff ;
+}
+.pricingtable-wrapper.style2.bg-grey.active .pricingtable-features li{
+  color: #fff;
+}
+.pricingtable-wrapper.style2.bg-grey.active .pricingtable-bx{
+  color: #000;
+}
+.pricingtable-wrapper.style2.bg-grey.active .pricingtable-bx span{
+  color: #000;
+}
+.pricingtable-wrapper.style2.active .pricingtable-features li:before{
+color: #ffff;
+}
+
+.pricingtable-features li i {
+  /* margin: 0 3px; */
+}
 .card {
   display: flex;
   flex-direction: column;
@@ -17399,9 +17533,133 @@ input[type="radio"]+label:hover:before {
 .card .body .imageContainer img {
   object-fit: cover;
 }
+@media(max-width: 990px){
+  .cardContainer .sort-title h4{
+    padding-bottom: 10px;
+  }
+  .pricingtable-bx {
+    margin: 0;
+  }
+  .pricingtable-bx span{
+    font-size: 16px !important;
+  }
+  .pricingtable-inner p{
+    margin-bottom: 0;
+    padding-bottom: 0;
+    font-size: 15px !important;
+  }
+  .cardContainer .site-button, .site-button-secondry{
+    padding: 8px 5px;
+    margin-top: 0;
+  }
+  .cardContainer .m-t20{
+    margin-top: 10px;
+  }
+  .cardContainer .site-button, .site-button-secondry span{
+    font-size: 12px;
+  }
+  .cardContainer .site-button, .site-button-secondry  .p-lr30{
+   padding: 8px 2px !important;
+  }
+  .pricingtable-wrapper.style2 .pricingtable-features li{
+    font-size: 14px;
+  }
+  .pricingtable-wrapper.style2 .pricingtable-features li{
+    padding: 1px;
+    padding-left: 30px;
+  }
 
+}
 
-@media(max-width: 500px) {
+@media(max-width: 776px){
+  .homeservice-heading{
+    /* border: 1px solid red; */
+  }
+  .main {
+    /* border: 1px solid black; */
+    padding-top: 0;
+  }
+  .main .row{
+    /* border: 1px solid black; */
+    margin-top: 40px;
+    /* padding-top: 0; */
+  }
+  .pricingtable-wrapper.style2{   
+    padding: 0;
+  }
+  .pricingtable-inner{
+   
+   padding: 0;
+   padding-top: 2px;
+   padding-bottom: 5px;
+  }
+  .cardContainer {
+    height: 800px;
+    top: 55px;
+    padding-top: 0;
+
+  }
+  .cardContainer .sort-title{
+    margin-top: 0px;
+    margin-bottom: 10px;
+   
+  }
+  .cardContainer .sort-title h4{
+    font-size: 20px !important;
+  }
+  .pricingtable-wrapper.style2 .pricingtable-bx{
+    /* padding: 5px 10px; */
+    
+  }
+  .pricingtable-price h4{
+    font-size: 18px;
+    padding: 0;
+  }
+  .pricingtable-bx {
+    margin: 0;
+  }
+  .pricingtable-bx span{
+    font-size: 16px !important;
+  }
+  .pricingtable-inner p{
+    margin-bottom: 0;
+    padding-bottom: 0;
+    font-size: 15px !important;
+  }
+  .cardContainer .site-button, .site-button-secondry{
+    padding: 8px 5px;
+    margin-top: 0;
+  }
+  .cardContainer .m-t20{
+    margin-top: 10px;
+  }
+  .cardContainer .site-button, .site-button-secondry span{
+    font-size: 12px;
+  }
+  .cardContainer .site-button, .site-button-secondry  .p-lr30{
+   padding: 8px 2px !important;
+  }
+  .pricingtable-wrapper.style2.active {
+    margin: -30px -10px 0;
+    padding: 0px 30px;
+    position: relative;
+    z-index: 1;
+}
+.pricingtable-wrapper.style2 .pricingtable-features{
+  padding: 10px 40px;
+}
+  
+}
+@media(max-width: 460px){
+  .main .row{
+    margin-top: 30px;
+  }
+  .pricingtable-inner p{
+    font-size: 14px;
+  }
+} 
+
+/* @media(max-width: 500px) {
 
 
 
@@ -17437,7 +17695,7 @@ input[type="radio"]+label:hover:before {
   .card .body .imageContainer img {
     top: 20px
   }
-}
+} */
 
 
 
@@ -17548,4 +17806,45 @@ input[type="radio"]+label:hover:before {
   .testimonial-14 {
     margin: 45px 30px 10px !important;
   }
+}
+
+.Am_a_Zing .bg-primary{
+  /* background-color: #97989b !important; */
+  background-color: #fff !important;
+  color: black;
+}
+.Am_a_Zing .bg-primary h2{
+  color: #1A43BF !important;
+  font-weight: 800;
+}
+.Am_a_Zing .icon-bx-wraper{
+  background: #1A43BF !important;
+}
+.Am_a_Zing .icon-bx-wraper:hover {
+  background-color: #fff !important;
+  border: 1px solid grey !important;
+}
+.academy h2{
+  color: #c21807 !important;
+}
+.academy .section-content .post-title a{
+  color: #c21807 !important;
+}
+
+.pr-service-hero{
+  background-image: url("/images/about-us/banner.jpg") !important;
+  /* height: 80vh; */
+}
+.pr-service-hero form{
+  /* border: 1px solid red; */
+  margin: 50px 0;
+  height: fit-content;
+}
+.pr-service-list .pricingtable-features {
+  border: 1px solid #e9e9e9 !important;
+}
+
+.pr-service-list .pricingtable-features li {
+  padding: 12px;
+  border-bottom: 1px solid #e9e9e9;
 }
