--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17833,7 +17833,7 @@ color: #ffff;
 .academy h2{
   color: #1A43BF !important;
 }
-.academy .section-content .post-title a{
+.academy .section-content .post-title {
   color: #1A43BF !important;
 }
 
