--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -3074,7 +3074,7 @@ HOME 5 Box Header
   height: 100%;
   right: 0;
   top: 0;
-  background-color: #f8991d;
+  background-color: #1a43bf;
   z-index: -1;
 }
 
