--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17597,11 +17597,11 @@ color: #ffff;
    padding-bottom: 5px;
   }
   .pricingtable-inner .dm{
-    height: 250px !important;
+    height: 230px !important;
   }
   .cardContainer {
     height: 800px;
-    top: 55px;
+    top: 30px;
     padding-top: 0;
 
   }
@@ -17633,7 +17633,7 @@ color: #ffff;
     font-size: 15px !important;
   }
   .cardContainer .site-button, .site-button-secondry{
-    padding: 8px 5px;
+    padding: 2px 3px;
     margin-top: 0;
   }
   .cardContainer .m-t20{
@@ -17642,8 +17642,8 @@ color: #ffff;
   .cardContainer .site-button, .site-button-secondry span{
     font-size: 12px;
   }
-  .cardContainer .site-button, .site-button-secondry  .p-lr30{
-   padding: 8px 2px !important;
+  .cardContainer .site-button, .site-button-secondry{
+   padding: 5px 0px !important;
   }
   .pricingtable-wrapper.style2.active {
     margin: -30px -10px 0;
@@ -17652,7 +17652,7 @@ color: #ffff;
     z-index: 1;
 }
 .pricingtable-wrapper.style2 .pricingtable-features{
-  padding: 10px 40px;
+  padding: 10px 10px;
 }
   
 }
@@ -17750,7 +17750,7 @@ color: #ffff;
 .home-services-section-2nd-bg {
   background-image: url(/images/element-2.png);
   background-repeat: no-repeat;
-  height: 465px;
+  height: 380px;
   margin-top: -350px;
 }
 
