--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -522,7 +522,7 @@ h6 {
   .portfolio .filters .btn a {
     clear: both;
     display: table-cell;
-    padding: 5px 20px;
+    padding: 5px 20px !important;
     text-align: center;
   }
 
