--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -3108,7 +3108,7 @@ HOME 5 Box Header
 }
 
 .amazing-pg .exhibition-carousel .owl-dot.active {
-  background: #646363;
+  background: #c83020 !important;
 }
 
 .exhibition-bx .title {
