--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17479,6 +17479,26 @@ color: #ffff;
 .pricingtable-features li i {
   /* margin: 0 3px; */
 }
+
+.pricingtable-wrapper .dm img{
+  position:absolute;
+  top:0;
+    left:0;
+    width:100% !important;
+    height:100% !important;
+    object-fit:cover
+}
+
+.pricingtable-wrapper .dm::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #000000a3;
+  width: 100%;
+  height: 100%;
+}
+
 .card {
   display: flex;
   flex-direction: column;
@@ -17545,6 +17565,8 @@ color: #ffff;
   background: url(/images/Home-Page/our-services-digital\ marketing-bg.jpg);
 
 } */
+
+
 @media(max-width: 990px){
   .cardContainer .sort-title h4{
     padding-bottom: 10px;
