--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -987,7 +987,7 @@ h6 {
 
 /* Service Box Style2 */
 .service-box.style2 {
-  padding: 60px;
+  padding: 0 80px;
   align-self: center;
   align-items: center;
   flex-wrap: wrap;
@@ -997,11 +997,12 @@ h6 {
 
 .service-box.style2 .title span {
   font-weight: 400;
+
 }
 
 .service-box.style2 .title {
-  font-size: 45px;
-  line-height: 55px;
+  font-size: 30px;
+   color: #1a43bf;
   font-weight: 700;
 }
 
@@ -1010,7 +1011,7 @@ h6 {
 }
 
 .about-industry .img-cover {
-  min-height: 500px;
+  height: 400px;
 }
 
 /* Service Box Style3 */
@@ -2896,8 +2897,9 @@ HOME 5 Box Header
 
 .section-head.style2 .title {
   font-weight: 600;
-  font-size: 40px;
+  font-size: 35px;
   margin-bottom: 10px;
+  /* color: #1a43bf; */
 }
 
 .section-head.style2 p {
@@ -7787,7 +7789,7 @@ HOME 5 Box Header
   }
 
   .about-industry .img-cover {
-    min-height: 300px;
+    height: 300px;
   }
 
   .counter-staus-box .play-btn {
