--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -3238,18 +3238,18 @@ HOME 5 Box Header
   transform: scale(1.3) rotate(15deg);
   opacity: 0.05;
 }
-
+/* .service-box.style2 .title {
+  font-size: 36px;
+  line-height: 44px;
+  margin-bottom: 15px;
+} */
 /* Responsive */
 @media only screen and (max-width: 1024px) {
   .service-box.style2 {
     padding: 30px;
   }
 
-  .service-box.style2 .title {
-    font-size: 36px;
-    line-height: 44px;
-    margin-bottom: 15px;
-  }
+  
 
   .team-box-type .team-p-info li {
     font-size: 14px;
