--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -6746,7 +6746,7 @@ HOME 5 Box Header
 
 .centeredSlides .swiper-slide.swiper-slide-active .testimonial-13 .testimonial-text {
   background-color: transparent;
-  color: #6f6f6f;
+  color: #494949;
 }
 
 .centeredSlides .swiper-slide.swiper-slide-active .testimonial-13 {
