--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -1383,6 +1383,7 @@ h6 {
   -ms-transform: translateY(-15px);
   -o-transform: translateY(-15px);
   border-color: var(--color-primary);
+ 
 }
 
 .counter-style-5:after {
@@ -1409,6 +1410,9 @@ h6 {
 .counter-style-5:hover .dlab-separator {
   background: #fff !important;
 }
+.counter-style-5:hover .flaticon-worker{
+  color: #fff !important;
+}
 
 .counter-style-5:hover:after {
   height: 100%;
@@ -1419,12 +1423,13 @@ h6 {
   -ms-transform-origin: bottom;
   -webkit-transform-origin: bottom;
   -o-transform-origin: bottom;
+  
   /* animation: animationSignal3;
 	animation-duration: 0.5s; */
 }
 
 .counter-staus-box .section-head .title {
-  font-size: 40px;
+  font-size: 35px;
   line-height: 55px;
   font-weight: 700;
   color: #fff;
@@ -8068,7 +8073,7 @@ button.scroltop {
   align-items: center;
   gap: 16px;
   color: #fff;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .dz-industry-zone .banner-contant .dz-bannerlist {
