--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -7567,7 +7567,7 @@ HOME 5 Box Header
 
   .content-inner {
     padding-bottom: 0;
-    padding-top: 30px;
+    padding: 30px 0;
   }
 
   .inquiry-form .form-control {
