--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18113,5 +18113,38 @@ color: #ffff;
   background: #c21908;
 }
 
+.ZingCourseModule .course-box {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  /* border: 1px solid #ddd; */
+  /* padding: 15px; */
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.ZingCourseModule .ow-blog-post {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.ZingCourseModule .ow-post-info {
+  flex-grow: 1;
+}
+
+.ZingCourseModule .ow-post-readmore {
+  margin-top: auto;
+}
+
+@media (max-width: 991px) {
+  .ZingCourseModule .course-box {
+    margin-bottom: 20px;
+  }
+}
+
+
 
 
