--- a/public/css/templete.css
+++ b/public/css/templete.css
@@ -2637,7 +2637,7 @@ HOME 5 Box Header
   display: flex;
   justify-content: space-between;
   padding: 10px 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: 1px solid #fff;
 }
 
 .list-details li:first-child {
@@ -2841,22 +2841,24 @@ HOME 5 Box Header
 
 /* Project */
 .project-info-box {
-  position: relative;
+  /* position: relative; */
+  position: sticky;
+  top: 100px;
 }
 
 .project-info-box .project-content {
   background: #fff;
   position: absolute;
   left: 0;
-  top: 50%;
-  padding: 40px 50px;
+  top: 92%;
+  padding: 40px 50px 30px 50px;
   width: 500px;
   transform: translateY(-100%);
   -moz-transform: translateY(-100%);
   -ms-transform: translateY(-100%);
   -o-transform: translateY(-100%);
   -webkit-transform: translateY(-100%);
-  opacity: 0;
+  opacity: 1;
   transition: all 0.8s;
   -moz-transition: all 0.8s;
   -webkit-transition: all 0.8s;
@@ -5493,7 +5495,15 @@ HOME 5 Box Header
   .project-info-box .project-content {
     padding: 15px 20px 10px;
     width: 350px;
+    /* height: 300px; */
   }
+
+  .project-info-box .project-content.last{
+    padding: 15px 20px 10px;
+    width: 390px;
+    /* height: 300px; */
+  }
+  
 
   .project-info-box .list-details li {
     padding: 8px 0;
@@ -9020,4 +9030,41 @@ button.scroltop {
 
 .site-footer.style-1 .footer-top {
   padding: 30px 0 20px;
+}
+
+@media (max-width: 1200px) {
+  .project-media img{
+    height: 500px !important;
+    object-fit: cover;
+  }
+
+
+  }
+@media (max-width: 990px) {
+.project-media img{
+  height: 400px !important;
+  object-fit: cover;
+}
+.zing-academy.course-details{
+  top: 80px !important;
+}
+.about-industry .img-cover{
+  height: 250px;
+}
+}
+
+@media (max-width: 950px) {
+.project-info-box .project-content {
+  padding: 15px 20px 10px;
+  width: 390px;
+  /* height: 300px; */
+}
+
+.project-info-box .project-content.last {
+  padding: 15px 20px 10px;
+  width: 390px !important;
+  /* height: 300px; */
+}
+
+
 }
